--- a/lesson-two.html
+++ b/lesson-two.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/main.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/lesson-two.css" />
   </head>
   <body>
-    <p>hahah</p>
-    <a href="./lesson-two.html">lesson 2</a>
-    <script src="/js/lesson-one.js"></script>
+    <p class="output">Selected color:-</p>
+    <div class="color-palette"></div>
+    <script type="module" src="./js/lesson-two.js"></script>
   </body>
 </html>
